[gd_scene load_steps=4 format=2]

[ext_resource path="res://graphics/player/player.png" type="Texture" id=1]
[ext_resource path="res://scenes/player/player.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 33.0

[node name="Player" type="KinematicBody2D"]
position = Vector2( 264, 177 )
script = ExtResource( 2 )

[node name="Player" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 16 )
shape = SubResource( 1 )

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="GrenadeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="LaserTimer" to="." method="_on_LaserTimer_timeout"]
[connection signal="timeout" from="GrenadeTimer" to="." method="_on_GrenadeTimer_timeout"]
